--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>RS YouTube Instagram Download</title>
+	<title>RS YouTube Facebook Instagram Spotify Downloader</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="/static/in.png">
