--- a/templates/MP3.html
+++ b/templates/MP3.html
@@ -74,12 +74,11 @@
 
 <footer class="footer">
 	<h4>Follow Me:</h4><br>
-	<a href="https://www.facebook.com/" class="fa fa-facebook" target="_blank"></a>
-<a href="https://twitter.com/" class="fa fa-twitter"target="_blank"></a>
+	<a href="https://twitter.com/_rishabh_sahil_" class="fa fa-twitter"target="_blank"></a>
 <a href="https://github.com/Rishabhsahil" class="fa fa-github" target="_blank" style="background-color: #E8EBE4"></a>
-<a href="https://www.linkedin.com/" class="fa fa-linkedin" target="_blank"></a>
+<a href="https://www.linkedin.com/in/rishabhsahil/" class="fa fa-linkedin" target="_blank"></a>
 <a href="https://www.youtube.com/channel/UCvNJtprg0qKG8qG9LaLPBew" class="fa fa-youtube" target="_blank"></a>
-<a href="https://www.instagram.com/_rishabh_yaduvanshi_" class="fa fa-instagram" target="_blank" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%)"></a><br><br>
+<a href="https://www.instagram.com/_itz_sahil_1435_" class="fa fa-instagram" target="_blank" style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%)"></a><br><br>
 <span id='ct'></span>
     <script type="text/javascript">
         function display_c()
